create new user page fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">AndroidGridLayout</string>
+
+    <string-array name="roles">
+        <item>student</item>
+        <item>admin</item>
+    </string-array>
+
 </resources>
